hphp/test/zend/good/ext/standard/tests/streams/bug49936.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if( substr(PHP_OS, 0, 3) == "WIN" )
  die("skip. Do not run on Windows");
}
