hphp/test/zend/bad/ext/phar/tests/phar_buildfromdirectory2.php.skipif
<?php
	if (!extension_loaded("phar")) die("skip");
	if (substr(PHP_OS, 0, 3) == "WIN") die("skip not for Windows");
?>